--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,16 +14,52 @@
         android:text="Smart Gloves Controller"
         android:textColor="@color/black"
         android:textStyle="bold"
-        android:textSize="22sp"
+        android:textSize="25sp"
         android:textAlignment="center"
         android:layout_marginVertical="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
+    <TextView
+        android:layout_marginTop="10dp"
+        android:text="Select Language : "
+        android:textColor="#474747"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:textAlignment="textStart"
+        android:layout_marginHorizontal="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
+    <LinearLayout
+        android:layout_marginHorizontal="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        >
+        <Button
+            android:id="@+id/telugu"
+            android:text="Telugu"
+            android:backgroundTint="#3F51B5"
+            android:layout_marginHorizontal="10dp"
+            android:layout_marginTop="20dp"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"/>
+        <Button
+            android:id="@+id/english"
+            android:text="English"
+            android:backgroundTint="#3F51B5"
+            android:layout_marginHorizontal="10dp"
+            android:layout_marginTop="20dp"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"/>
+
+    </LinearLayout>
     <TextView
         android:text="Select mode : "
-        android:textColor="@color/black"
+        android:layout_marginTop="20dp"
+        android:textColor="#474747"
         android:textSize="18sp"
+        android:textStyle="bold"
         android:textAlignment="textStart"
         android:layout_marginHorizontal="20dp"
         android:layout_width="match_parent"
@@ -33,6 +69,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:layout_marginHorizontal="10dp"
         >
         <Button
             android:layout_weight="1"
@@ -65,7 +102,7 @@
     <Button
         android:id="@+id/connectButton"
         android:text="Connect"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="30dp"
         android:backgroundTint="#E91E63"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
@@ -76,7 +113,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="20sp"
-        android:background="@color/black"
         android:textColor="@color/black"
         android:textStyle="bold"
         android:padding="20dp"
