--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,6 @@
     android:background="#DEF5FF"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
-
     <TextView
         android:text="Smart Gloves Controller"
         android:textColor="@color/black"
@@ -19,85 +18,144 @@
         android:layout_marginVertical="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
-    <TextView
-        android:layout_marginTop="10dp"
-        android:text="Select Language : "
-        android:textColor="#474747"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        android:textAlignment="textStart"
-        android:layout_marginHorizontal="20dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-
     <LinearLayout
-        android:layout_marginHorizontal="10dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:gravity="center_vertical"
+        android:background="#DEF5FF"
+        android:layout_height="wrap_content"
         >
-        <Button
-            android:id="@+id/telugu"
-            android:text="Telugu"
-            android:backgroundTint="#3F51B5"
-            android:layout_marginHorizontal="10dp"
-            android:layout_marginTop="20dp"
-            android:layout_width="100dp"
+        <TextView
+            android:text="Emergency number : "
+            android:textColor="#474747"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:textAlignment="textStart"
+            android:layout_marginHorizontal="20dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
-        <Button
-            android:id="@+id/english"
-            android:text="English"
-            android:backgroundTint="#3F51B5"
-            android:layout_marginHorizontal="10dp"
-            android:layout_marginTop="20dp"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"/>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/filledTextField"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Enter number">
+
+            <!--this is the actual edit text which takes the input-->
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/number"
+                android:imeOptions="actionGo"
+                android:inputType="number"
+                android:layout_marginEnd="10dp"
+                android:maxLength="10"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+        </com.google.android.material.textfield.TextInputLayout>
 
     </LinearLayout>
-    <TextView
-        android:text="Select mode : "
-        android:layout_marginTop="20dp"
-        android:textColor="#474747"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        android:textAlignment="textStart"
-        android:layout_marginHorizontal="20dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-
     <LinearLayout
+        android:visibility="visible"
         android:layout_width="match_parent"
+        android:orientation="vertical"
+        android:gravity="center_horizontal"
+        android:background="#DEF5FF"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginHorizontal="10dp"
         >
-        <Button
-            android:layout_weight="1"
-            android:id="@+id/first"
-            android:text="Home"
-            android:backgroundTint="#3F51B5"
-            android:layout_marginHorizontal="10dp"
-            android:layout_marginTop="20dp"
-            android:layout_width="wrap_content"
+
+        <TextView
+            android:layout_marginTop="10dp"
+            android:text="Select Language : "
+            android:textColor="#474747"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:textAlignment="textStart"
+            android:layout_marginHorizontal="20dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
-        <Button
-            android:layout_weight="1"
-            android:id="@+id/second"
-            android:text="Friends"
-            android:backgroundTint="#3F51B5"
+
+        <LinearLayout
             android:layout_marginHorizontal="10dp"
+            android:layout_width="match_parent"
+
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            >
+            <Button
+                android:id="@+id/telugu"
+                android:text="Telugu"
+                android:backgroundTint="#3F51B5"
+                android:layout_marginHorizontal="10dp"
+                android:layout_marginTop="20dp"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"/>
+            <Button
+                android:id="@+id/english"
+                android:text="English"
+                android:backgroundTint="#3F51B5"
+                android:layout_marginHorizontal="10dp"
+                android:layout_marginTop="20dp"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"/>
+            <Button
+                android:id="@+id/hindi"
+                android:text="Hindi"
+                android:backgroundTint="#3F51B5"
+                android:layout_marginHorizontal="10dp"
+                android:layout_marginTop="20dp"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"/>
+
+        </LinearLayout>
+        <TextView
+            android:text="Select mode : "
             android:layout_marginTop="20dp"
-            android:layout_width="wrap_content"
+            android:textColor="#474747"
+            android:textSize="18sp"
+            android:visibility="visible"
+            android:textStyle="bold"
+            android:textAlignment="textStart"
+            android:layout_marginHorizontal="20dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
-        <Button
-            android:layout_weight="1"
-            android:id="@+id/third"
-            android:text="market"
-            android:backgroundTint="#3F51B5"
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:visibility="visible"
             android:layout_marginHorizontal="10dp"
-            android:layout_marginTop="20dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            >
+            <Button
+                android:layout_weight="1"
+                android:id="@+id/first"
+                android:text="Home"
+                android:backgroundTint="#3F51B5"
+                android:layout_marginHorizontal="10dp"
+                android:layout_marginTop="20dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+            <Button
+                android:layout_weight="1"
+                android:id="@+id/second"
+                android:text="Friends"
+                android:backgroundTint="#3F51B5"
+                android:layout_marginHorizontal="10dp"
+                android:layout_marginTop="20dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+            <Button
+                android:layout_weight="1"
+                android:id="@+id/third"
+                android:text="market"
+                android:backgroundTint="#3F51B5"
+                android:layout_marginHorizontal="10dp"
+                android:layout_marginTop="20dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+        </LinearLayout>
+
+
     </LinearLayout>
     <Button
         android:id="@+id/connectButton"
